Closed
Bug 226617
Opened 22 years ago
Closed 22 years ago
document.writing <script> with syntax error stops the first script
Categories
(Core :: DOM: Core & HTML, defect, P2)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla1.6beta
People
(Reporter: jruderman, Assigned: jst)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
5.04 KB,
patch
|
caillon
:
review+
brendan
:
superreview+
brendan
:
approval1.6b+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Type the following into http://www.squarefree.com/htmledit/ :
<script> alert(5 </script>
Result: syntax error on js console, spinning throbber.
Expected: syntax error on js console.
2. Add a ")".
Result: nothing happens, throbber keeps spinning.
Expected: dialog with "5" in it.
Regression window:
Works: Firebird 11/21
Broken: Firebird 11/22
Broken: Firebird 11/23
I suspect the checkin for bug 224549, "using addEventListener() for keypress
handler prevents JavaScript error propagation".
| Reporter | ||
Comment 1•22 years ago
|
||
Assigning to jst (owner of bug 224549), ccing other people from bug 224549
Assignee: general → jst
| Reporter | ||
Updated•22 years ago
|
Flags: blocking1.6b?
| Reporter | ||
Updated•22 years ago
|
Comment 2•22 years ago
|
||
This sounds like it would be good to fix. Do we know of any high-profile sites
that this impacts? Are users going to be seeing a constantly spinning throbber a
lot?
| Assignee | ||
Comment 3•22 years ago
|
||
Fixing. Not sure how common this is, it looks like it'll be an easy fix.
Status: NEW → ASSIGNED
OS: Windows XP → All
Priority: -- → P2
Hardware: PC → All
Target Milestone: --- → mozilla1.6beta
| Assignee | ||
Comment 4•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #136316 -
Flags: superreview?(brendan)
Attachment #136316 -
Flags: review?(caillon)
Comment 5•22 years ago
|
||
Comment on attachment 136316 [details] [diff] [review]
Only notify XPConnect about exceptions that are actually pending
Sure, I shoulda thought of that last time! This should definitely get fixed in
1.6b -- preapproving.
/be
Attachment #136316 -
Flags: superreview?(brendan)
Attachment #136316 -
Flags: superreview+
Attachment #136316 -
Flags: approval1.6b+
Comment 6•22 years ago
|
||
Comment on attachment 136316 [details] [diff] [review]
Only notify XPConnect about exceptions that are actually pending
r=caillon
Attachment #136316 -
Flags: review?(caillon) → review+
| Assignee | ||
Comment 7•22 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•22 years ago
|
Flags: blocking1.6b?
You need to log in
before you can comment on or make changes to this bug.
Description
•