Fixing bug 226617. Don't tell XPConnect that there are pending exceptions when there aren't any. r=caillon@aillon.org, sr=brendan@mozilla.org, a=brendan@mozilla.org.